versions/v1.3/modules/en/pages/integrations/rancher/harvester-ui-extension.adoc
= Harvester UI Extension

Rancher 2.10.0 and later versions integrate with {harvester-product-name} using the https://github.com/harvester/harvester-ui-extension[Harvester UI Extension], which is built on the https://www.npmjs.com/package/@rancher/shell[@rancher/shell] library.

[NOTE]
====
The current UI will continue to support {harvester-product-name} v1.3.x and v1.4.x releases. New features in later releases will be implemented in the Harvester UI Extension.
====

== Support Matrix

Versions of the {harvester-product-name} operating system and the Harvester UI Extension will align starting with v1.5.0.

|===
| {harvester-product-name} Cluster | Harvester UI Extension | Minimum Supported Rancher

| v1.3.0, v1.3.1,  v1.3.2
| v1.0.2
| 2.10.1

| v1.4.1 
| v1.0.3
| 2.10.1

| v1.4.2
| v1.0.4
| 2.10.1

| v1.5.0
| v1.5.0
| 2.11.0
|===

Installing the extension over the network is not possible in air-gapped environments, so you must perform the workaround outlined in xref:../../installation-setup/airgap.adoc#_harvester_ui_extension_with_rancher_integration[Harvester UI Extension with Rancher Integration].

== Installation on Rancher 2.10

=== Automatic Installation

You can install the Harvester UI Extension with a single click.

. On the Rancher UI, go to *Virtualization Management*.
+
image::rancher/auto-install-ui-extension.png[]

. On the *Harvester Clusters* tab, click *Install*.
+
Allow some time for the extension to be installed. The screen is automatically refreshed once the installation is completed.
+
[NOTE]
====
Do not navigate away from the screen during the installation process.
====

=== Manual Installation

If the automatic installation fails, you can specify the Harvester UI Extension repository URL and then install the extension.

image::rancher/ui-extension-install-failed.png[]

. On the Rancher UI, go to *local -> Apps -> Repositories*, and then click *Create*.
+
image::rancher/ui-extension-app-repository-setup.png[]

. Configure the following settings:
+
* Name: Specify a name for the repository.
* Target: Select **Git repository containing Helm chart or cluster template definitions**.
* Git Repo URL: Specify **https://github.com/harvester/harvester-ui-extension**.
* Git Branch: Specify **gh-pages**.

. Click *Create*.

. Go to **Extensions -> Available**.
+
image::rancher/ui-extension-available-tab.png[]

. Locate the extension named *Harvester*, and then click *Install*.

== Upgrades

=== Automatic Upgrades

The *Update* button appears whenever a new version of the extension is available.

. On the Rancher UI, go to *Virtualization Management*.
+
image::rancher/ui-extension-update.png[]

. Click *Update*.
+
Allow some time for the extension to be upgraded. The screen is automatically refreshed once the upgrade is completed.

=== Manual Upgrades

. On the Rancher UI, go to *local -> Apps -> Repositories*.

. Locate the repository with the following settings, and then select *⋮ -> Refresh*.
+
* URL: **https://github.com/harvester/harvester-ui-extension**
* Branch: **gh-pages**
+
image::upgrade/rancher-2.10.1-repository-page.png[]

. Go to *Extensions -> Installed*.

. Locate the extension named *Harvester*, and then click *Update*.

. Select the new version, and then click *Update*.

image::upgrade/update-harvester-ui-extension-modal.png[]

. Allow some time for the extension to be upgraded, and then refresh the screen.